<resources>
    <string name="app_name">WhoDoYouKnowHere</string>
    <string name="title_name">Who Do You Know Here</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_event_org">EventOrgActivity</string>
    <string name="user">User</string>
    <string name="org_events">Your Events</string>
    <string name="add_dialog_title">Add Event</string>
    <string name="add_dialog_toggle_on">Yes</string>
    <string name="add_dialog_toggle_off">No</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="back_button_exit_toast">Press the back button once again to close the application.</string>

</resources>
