<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <VideoView android:id="@+id/video_backdrop"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   style="@style/AppTheme.NoActionBar"
                   android:layout_gravity="center"
                   app:layout_constraintDimensionRatio="16:9"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
        />
    </RelativeLayout>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_light"
            android:layout_centerHorizontal="true"
    />

    <TextView android:id="@+id/title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/title_name"
              app:fontFamily="@font/lobster"
              android:textStyle="bold"
              android:textSize="30sp"
              android:layout_centerHorizontal="true"
              android:textAlignment="center"
              android:layout_marginTop="20dp"
              android:layout_marginBottom="40dp"
              android:textColor="@android:color/white"
              android:layout_below="@+id/logo"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  tools:context=".LoginActivity"
                  android:layout_below="@+id/title">

        <!-- Login progress -->
        <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>
        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
            >

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                >

                    <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginVertical="10dp"
                            android:background="@drawable/email_background_img"
                            android:textAlignment="center"

                    />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginVertical="10dp"
                            android:background="@drawable/email_background_img"
                            android:textAlignment="center"
                    />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <Button
                            android:id="@+id/email_sign_in_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/action_sign_in_short"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                            android:textStyle="bold"/>
                    <Button
                            android:id="@+id/email_register_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/action_register"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                            android:textStyle="bold"/>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
